k8s/support-console/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: support-console
  labels:
    name: support-console
