k8s/support-console/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: support-console
  namespace: support-console
spec:
  replicas: 1
  selector:
    matchLabels:
      app: support-console
  template:
    metadata:
      labels:
        app: support-console
    spec:
      imagePullSecrets:
        - name: beyondtrust-registry-secret
      containers:
        - name: support-console
          image: beyondtrust-docker.jfrog.io/beyondtrust/nomine/support-console:2.23.0
          ports:
            - containerPort: 80
