k8s/support-console/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: support-console-svc
  namespace: support-console
  labels:
    app: support-console
    app.kubernetes.io/name: support-console-svc
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: health
      port: 8181
      targetPort: 8181
      protocol: TCP
    - name: metrics-nginx
      port: 8083
      targetPort: 8083
      protocol: TCP
    - name: metrics-exporter
      port: 9113
      targetPort: 9113
      protocol: TCP
  selector:
    app: support-console
    app.kubernetes.io/name: support-console-svc
